--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: deno lint --unstable
 
       - name: Run deno test
-        run: deno test -A --unstable --import-map=import_map.json --coverage
+        run: deno test -A --unstable --import-map=import_map.json
 
       - name: Release
         uses: softprops/action-gh-release@v1
