--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -25,6 +25,7 @@ jobs:
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
           deno run --unstable --allow-net --allow-read --allow-write --import-map=import_map.json mod.ts
+          deno fmt
           git add .
           git commit -m "update by github action"
           git push
